Version 3.73 - 2017.09.16
-------------------------
Added description of -R option in output from affixtrain -h.

Version 3.72 - 2017.08.09
-------------------------
Adapted example/readme.txt to the new default behaviour when the -n parameter
is not given explictly. Also explained that you always need to generate
flexrules on the basis of a fullform / lemma list, disregarding POS tags in the
training data, even if you have plans to also generate flexrules on a per POS
tag basis. The neutral flexrules are needed as a last resort for words with
tags that are not represented in the training data.

The help text (affixtrain -h) explains that affixtrain assumes -n FBT if there
are three or more columns in the training data and otherwise -n FB. 
(Previously, the default has been -n FB in all cases. That was the reason why
the example did not work as intended.)

Version 3.71 - 2017.06.20
-------------------------
Fixed bugs related to the new behaviour in 3.7

Changed -v option. Before it was a boolean, now it is a natural number or -
If - or 0, the program is not verbose. If 1 or greater, the program is verbose.
The greater the number, the more verbose.

When validating the rules, if there are few available word lemma pairs, the
program does merely n-fold cross validation, where n is the number of clusters
of word lemma pairs. A cluster, or "clump", is a set of word lemma pairs that
are linked by having the same word (homographs) or by having the same lemma
(belonging to same paradigm). If there are many clumps, validation is still
done by cross validation, but n varies so as to give statistically significant
results. For example, if there are a million clumps and 1.5 % is used for
testing, just two iterations are enough to establish reliable values for
accuracy and precision, since 1.5 % of a million still is 15000 (randomly
chosen) test pairs.

If no column format is specified, the program guesses whether it is FB or FBT,